--- a/web_service/templates/account/profile.j2
+++ b/web_service/templates/account/profile.j2
@@ -33,7 +33,7 @@
                 <div class="form-group">
                   <label class="form-label" for="name">{{ _('Full name') }}</label>
                   {% if user.last_name %}
-                    <input class="form-input" id="name" name="name" type="text" value="{{user.last_name}} {{user.first_name}} {{user.surname}}" data-validate="require"/>
+                    <input class="form-input" id="name" name="name" type="text" value="{{ user.surname }}&nbsp;{{ user.first_name }}&nbsp;{{ user.last_name }}" data-validate="require"/>
                   {% else %}
                     <input class="form-input" id="name" name="name" type="text" data-validate="require"/>
                   {% endif %}
@@ -48,12 +48,12 @@
                   {% endif %}
                 </div>
                 <div class="form-group">
-                  <label class="form-label" for="phone">{{ _('Phone') }}</label>
-                  <input class="form-input" id="phone" name="phone" type="text" value="{{ user.phone_number }}" placeholder="{{ _('Phone number') }}" autocomplete="off"/>
-                </div>
-                <div class="form-group">
                   <label class="form-label" for="mail">E-mail</label>
                   <input class="form-input" id="mail" name="mail" type="text" value="{{ user.email }}" data-validate="require" autocomplete="off"/>
+                </div>
+                <div class="form-group">
+                  <label class="form-label" for="phone">{{ _('Phone') }}</label>
+                  <input class="form-input" id="phone" name="phone" type="text" value="{{ user.phone_number }}" placeholder="{{ _('Phone number') }}" autocomplete="off"/>
                 </div>
                 <div class="form-group">
                   <label class="form-label" for="password">{{ _('Password') }}</label>
